<resources>
    <string name="app_name">MAD Assignment</string>
    <string name="title_home">Home</string>
    <string name="title_add_record">Add Record</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_news">News</string>
    <string name="title_settings">Settings</string>
    <string name="title_record_details">Record Details</string>
    <string name="title_news_details">News Details</string>
    <string name="hint_image">Image Url</string>
    <string name="hint_name">Name</string>
    <string name="hint_description">Description</string>
</resources>